--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [API_KEYS]
-OPENAI_API_KEY = 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
-PERPLEXITY_API_KEY = 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
+OPENAI_API_KEY = <replace API key>
+PERPLEXITY_API_KEY = <replace api key>
 
 [MODEL_CONFIG]
 LLM_TYPE = OPENAI_GPT4o
